Added some more assets and React slick slider

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.slick-slider img {
+    object-fit: contain !important;
+    height: 150px;
+    width: 200px;
+    justify-items: center;
+}
