Logo slider done, needs minor improvements

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@
     width: 200px;
     justify-items: center;
 }
+
+.slick-prev {
+    left: 3% !important;
+    z-index: 1;
+  }
+  .slick-next {
+    right: 3% !important;
+    z-index: 1;
+  } 
